using UnityEngine;

public static class BBK // blackboard key
{
    public const string Enemy = "Enemy";
    public const string isGrounded = "isGrounded";
    public const string isMoving = "isMoving";
    public const string isHitt = "isHitt";
    public const string isDead = "isDead";
    public const string isWokeUp = "isWokeUp";
    public const string isGroggy = "isGroggy";
    public const string isStunned = "isStunned";
    public const string StuckAtWall = "StuckAtWall";
    public const string StuckAtCliff = "StuckAtCliff";
    public const string AttackState = "AttackState";
    public const string CurrentPattern = "CurrentPattern";
}